Wed May 17, 2000 Jay 'Eraserhead' Felice <jfelice@cronosys.com>
	* Added TODO file.  Some work on propogating the config object to
	  all the proper components (specifically the Gtk5250PropDlg).
	* Load font_80 and font_132 from config file.
	* Start configuration propigation (to Gtk5250Terminal and 
	  Gtk5250PropDlg).

Tue May 16, 2000 Jay 'Eraserhead' Felice <jfelice@cronosys.com>
	* Fixed some Gtk5250Terminal resizing bugs, it's now possible to use
	  132 column mode (although it doesn resize smaller again when you
	  go back to 80 column mode yet, hmm...)
	* Fixed autogen.sh so that it doesn't try to run autoheader.
	* Handled translation of Shift+Fkey to proper Fkey (for example,
	  Shift+F1 = F13).

Fri May 05, 2000 Jay 'Eraserhead' Felice <jfelice@cronosys.com>
	* Fixed up so it works with current version in CVS (0.15.8+)
	* Fixed bug where it was drawing a space in the last attribute
	  (instead of in the normal attribute) for the actual attribute
	  character.
	* Supplied dummy 'config' terminal method.
	* Implemented indicators, corrected screen redraw issues.

Fri Dec 17, 1999  Jay 'Eraserhead' Felice <jasonf@nacs.net>
	* Added support for compiling with GTK+ but without Gnome.
	* Added BUGS file, gtk-5250.c
	* More robust autoconf support.

Wed Dec  1, 1999  Jay 'Eraserhead' Felice <jasonf@nacs.net>
	* Updated to compile with tn5250-0.15.3+ (API change from passing
	  display buffer to terminals to passing display to terminals).

Sat Nov 20, 1999  Jay 'Eraserhead' Felice <jasonf@nacs.net>
	* autoconf'd and automade
	* Better caching to bitmap (don't draw characters that haven't changed
	  since last draw).
	* Don't use a copied DBuffer as a cache, which saves lots of copies,
	  mallocs, frees, etc.
	* Implemented 'beep' terminal method.
